--- a/roles/common/templates/netplan.yaml.j2
+++ b/roles/common/templates/netplan.yaml.j2
@@ -20,3 +20,8 @@ network:
           - "{{ item }}"
 {% endfor %}
 {% endif %}
+{% if common__additional_ethernet_interfaces is defined %}
+{% for interface, config in common__additional_ethernet_interfaces.items() %}
+    {{ interface }}: {{ config }}
+{% endfor %}
+{% endif %}
