--- a/roles/common/templates/hosts.j2
+++ b/roles/common/templates/hosts.j2
@@ -7,18 +7,27 @@
 {% else -%}
 {% set hostnames %}{{ inventory_hostname }} {{ ansible_hostname }}{% endset -%}
 {% endif -%}
+{% set interface_lo = ansible_interfaces | select('match', '^lo') | first -%}
 
 # IPv4 Entries
-127.0.0.1 localhost
+{% if ansible_facts[interface_lo].ipv4 | length %}
+  {{- ansible_facts[interface_lo].ipv4.address }} localhost
+{% endif %}
 {% for ipv4_host in common__ip_addresses | ansible.netcommon.ipv4('host/prefix') %}
-{{ ipv4_host | ansible.netcommon.ipaddr('address') }} {{ hostnames }}
+  {{- ipv4_host | ansible.netcommon.ipaddr('address') }} {{ hostnames -}}
+  {%- if ansible_facts[interface_lo].ipv4 | length == 0 %} localhost{% endif %}
 {% endfor %}
 
+
 # IPv6 Entries
-::1 ip6-localhost  ip6-loopback
+{% if ansible_facts[interface_lo].ipv6 | length %}
+  {{- ansible_facts[interface_lo].ipv6 | map(attribute='address') | first }} ip6-localhost ip6-loopback
+{% endif %}
 {% for ipv6_host in common__ip_addresses | ansible.netcommon.ipv6('host/prefix') %}
-{{ ipv6_host | ansible.netcommon.ipaddr('address') }} {{ hostnames }}
+  {{- ipv6_host | ansible.netcommon.ipaddr('address') }} {{ hostnames -}}
+  {%- if ansible_facts[interface_lo].ipv4 | length == 0 %} ip6-localhost ip6-loopback{% endif %}
 {% endfor %}
+
 fe00::0  ip6-localnet
 ff00::0  ip6-mcastprefix
 ff02::1  ip6-allnodes
