--- a/roles/common/templates/zabbix-agentd.conf.j2
+++ b/roles/common/templates/zabbix-agentd.conf.j2
@@ -1,6 +1,7 @@
 # {{ ansible_managed }}
 
 Hostname={{ inventory_hostname }}
+Include={{ common__etc_dir }}/zabbix/zabbix_agent.d/*.conf
 LogType=file
 LogFile=/var/log/zabbix/zabbix-agent.log
 Server=zabbix-server.hogs.tswn.us
