use different hostname for zabbix server

--- a/roles/common/templates/zabbix-agentd.conf.j2
+++ b/roles/common/templates/zabbix-agentd.conf.j2
@@ -4,5 +4,5 @@ Hostname={{ inventory_hostname }}
 Include={{ common__etc_dir }}/zabbix/zabbix_agent.d/*.conf
 LogType=file
 LogFile=/var/log/zabbix/zabbix-agent.log
-Server=zabbix-server.hogs.tswn.us
-ServerActive=zabbix-server.hogs.tswn.us
+Server=server.zabbix.hogs.tswn.us
+ServerActive=server.zabbix.hogs.tswn.us
