--- a/roles/common/templates/network-interfaces.j2
+++ b/roles/common/templates/network-interfaces.j2
@@ -6,27 +6,32 @@ source /etc/network/interfaces.d/*
 auto lo
 iface lo inet loopback
 
-# Primary Interface {{ ansible_default_ipv4.interface }} (v4)
-auto {{ ansible_default_ipv4.interface }}
-iface {{ ansible_default_ipv4.interface }} inet static
+{%- set primary_interface = common__ethernet_primary_interface | default(ansible_default_ipv4.interface, true) %}
+
+# Primary Interface {{ primary_interface }} (v4)
+auto {{ primary_interface }}
+iface {{ primary_interface }} inet static
 {% for ipv4_host in common__ip_addresses | ansible.netcommon.ipv4('host/prefix') %}
-    address   {{ ipv4_host | ansible.netcommon.ipaddr('address') }}
-    network   {{ ipv4_host | ansible.netcommon.ipaddr('network') }}
-    netmask   {{ ipv4_host | ansible.netcommon.ipaddr('netmask') }}
-    broadcast {{ ipv4_host | ansible.netcommon.ipaddr('broadcast') }}
+    address         {{ ipv4_host | ansible.netcommon.ipaddr('address') }}
+    network         {{ ipv4_host | ansible.netcommon.ipaddr('network') }}
+    netmask         {{ ipv4_host | ansible.netcommon.ipaddr('netmask') }}
+    broadcast       {{ ipv4_host | ansible.netcommon.ipaddr('broadcast') }}
 {% endfor %}
-    gateway   {{ common__gateway_v4_address }}
+    gateway         {{ common__gateway_v4_address }}
+{% if "." in primary_interface %}
+    vlan-raw-device {{ primary_interface.split('.')[0] }}
+{% endif %}
 
 {% set ipv6_list = common__ip_addresses | ansible.netcommon.ipv6('host/prefix') %}
 {% if ipv6_list | length > 0 %}
-# Primary Interface {{ ansible_default_ipv4.interface }} (v6)
-iface {{ ansible_default_ipv4.interface }} inet6 static
+# Primary Interface {{ primary_interface }} (v6)
+iface {{ primary_interface }} inet6 static
     address   {{ ipv6_list[0] }}
     gateway   {{ common__gateway_v6_address }}
 {% if ipv6_list | length > 1 %}
 {% for subnet in ipv6_list[1:] %}
-    up   /sbin/ip address add {{ subnet }} dev {{ ansible_default_ipv4.interface }}
-    down /sbin/ip address del {{ subnet }} dev {{ ansible_default_ipv4.interface }}
+    up   /sbin/ip address add {{ subnet }} dev {{ primary_interface }}
+    down /sbin/ip address del {{ subnet }} dev {{ primary_interface }}
 {% endfor %}
 {% endif %}
 {% endif %}
