do not try to set an unset description for a firewall rule

--- a/roles/vyos-firewall/templates/vyos_firewall__zones.j2
+++ b/roles/vyos-firewall/templates/vyos_firewall__zones.j2
@@ -4,7 +4,7 @@
   - description:{% if "description" in zone %}
   "{{ zone.description }}"
 {% else %}
-  None
+  null
 {% endif %}
     firewall_name: {{ zone.firewall_name | default(zone.name) }}
     interface: {{ zone.interface | default(None)}}
