--- a/roles/common/templates/chrony.conf.ubuntu.j2
+++ b/roles/common/templates/chrony.conf.ubuntu.j2
@@ -47,5 +47,5 @@ makestep 1 3
 {% if common__be_ntp_server %}
 allow 10.0.0.0/8
 
-log tracking measurements statistics
+#log tracking measurements statistics
 {% endif %}
