fix but when setting multiple interfaces for a zone

--- a/roles/vyos-firewall/templates/zone-policy.j2
+++ b/roles/vyos-firewall/templates/zone-policy.j2
@@ -30,7 +30,7 @@ set zone-policy zone {{ zone.name }} interface '{{ interface }}'
     {% endif %}
     {%- for interface in zone.interfaces %}
         {{- set_interface(zone, interface) }}
-    {%- endfor -%}
+    {% endfor -%}
 {%- endmacro %}
 
 {%- macro set_zone_firewalls(zone, afi) -%}
