--- a/plays/kairos/templates/config.yml.j2
+++ b/plays/kairos/templates/config.yml.j2
@@ -32,9 +32,9 @@ k3s:
 {% if hostvars[host].k3s_controlplane and hostvars[host].k3s_cluster_init | default(False) %}
 bundles:
   - targets:
-    - run: run://quay.io/kairos/community-bundles:calico_latest
+    - run://quay.io/kairos/community-bundles:calico_latest
   - targets:
-    - run: run://quay.io/kairos/community-bundles:longhorn_latest
+    - run://quay.io/kairos/community-bundles:longhorn_latest
 calico:
   values: {{ hostvars[host].calico_values }}
   version: 3.25.0
