--- a/plays/kairos/templates/config.yml.j2
+++ b/plays/kairos/templates/config.yml.j2
@@ -38,6 +38,7 @@ k3s-agent:
   args:
     - --flannel-iface=man
     - --node-ip={{ hostvars[host].common__ip_addresses | ansible.utils.ipv4 | ansible.utils.ipaddr('address') | first }}
+    - --node-name={{ hostvars[host].inventory_hostname_short }}
 {% endif %}
   enabled: true
   env:
