--- a/plays/kairos/templates/config.yml.j2
+++ b/plays/kairos/templates/config.yml.j2
@@ -10,7 +10,7 @@ users:
 {% if hostvars[host].k3s_controlplane %}
 k3s:
   args:
-    - --node-ip={{ hostvars[host].common__ip_addresses | ansible.utils.ipv4 | ansible.utils.ipaddr('address') | first }}
+    - --node-ip={{ hostvars[host].common__ip_addresses | ansible.utils.ipaddr('10.10.0.0/24') | ansible.utils.ipaddr('address') | first }}
     - --node-name={{ hostvars[host].inventory_hostname_short }}
 {% if hostvars[host].k3s_cluster_init | default(False) %}
     - --cluster-init
@@ -37,7 +37,7 @@ k3s:
 k3s-agent:
   args:
     - --flannel-iface=man
-    - --node-ip={{ hostvars[host].common__ip_addresses | ansible.utils.ipv4 | ansible.utils.ipaddr('address') | first }}
+    - --node-ip={{ hostvars[host].common__ip_addresses | ansible.utils.ipaddr('10.10.0.0/24') | ansible.utils.ipaddr('address') | first }}
     - --node-name={{ hostvars[host].inventory_hostname_short }}
 {% endif %}
   enabled: true
