--- a/plays/kairos/templates/config.yml.j2
+++ b/plays/kairos/templates/config.yml.j2
@@ -5,7 +5,9 @@ hostname: {{ hostvars[host].inventory_hostname }}
 users:
   - name: kairos
     ssh_authorized_keys:
-      - {{ common__ansible_key_type }} {{ common__ansible_key }}
+{% for item in common__keys %}
+      - {{ item.type }} {{ item.key }}
+{% endfor %}
 
 {% if hostvars[host].k3s_controlplane %}
 k3s:
