--- a/plays/kairos/templates/config.yml.j2
+++ b/plays/kairos/templates/config.yml.j2
@@ -59,6 +59,54 @@ stages:
         NTP: {{ common__ntp_pool }}
         FallbackNTP: ""
     - files:
+{% if "bonds" in hostvars[host].common__interfaces %}
+{% for bond in hostvars[host].common__interfaces.bonds %}
+        - path: /etc/systemd/network/01-{{ bond.name }}.netdev
+          permissions: 0644
+          content: |
+            [NetDev]
+            Name={{ bond.name }}
+            Kind=bond
+            [Bond]
+            Mode={{ bond.mode }}
+            PrimaryReselectPolicy=always
+            MIIMonitorSec=1s
+        - path: /etc/systemd/network/01-{{ bond.name }}.network
+          permissions: 0644
+          content: |
+            [Match]
+            Name={{ bond.name }}
+            [Network]
+            Bridge={{ bond.bridge_name }}
+        - path: /etc/systemd/network/02-{{ bond.bridge_name }}.netdev
+          permissions: 0644
+          content: |
+            [NetDev]
+            Name=trunk
+            Kind=bridge
+        - path: /etc/systemd/network/02-{{ bond.bridge_name }}.network
+          permissions: 0644
+          content: |
+            [Match]
+            Name={{ bond.bridge_name }}
+            [Network]
+{% for network in hostvars[host].kairos_managed_networks %}
+            VLAN={{ network.name }}
+{% endfor %}
+{% for slave in bond.slaves %}
+        - path: /etc/systemd/network/05-slave-{{ slave.mac | replace(':', '-') }}-{{ bond.name }}.network
+          permissions: 0644
+          content: |
+            [Match]
+            PermanentMACAddress={{ slave.mac }}
+            [Network]
+            Bond={{ bond.name }}
+{% if slave.primary | default(false) %}
+            PrimarySlave=true
+{% endif %}
+{% endfor %}
+{% endfor %}
+{% else %}
         - path: /etc/systemd/network/01-trunk.network
           permissions: 0644
           content: |
@@ -70,6 +118,7 @@ stages:
 {% for network in hostvars[host].kairos_managed_networks %}
             VLAN={{ network.name }}
 {% endfor %}
+{% endif %}
 {% for network in hostvars[host].kairos_managed_networks %}
         - path: /etc/systemd/network/10-{{ network.name }}.netdev
           permissions: 0644
