--- a/plays/kairos/templates/config.yml.j2
+++ b/plays/kairos/templates/config.yml.j2
@@ -32,6 +32,7 @@ k3s:
     - --cluster-cidr=172.16.0.0/16
     - --service-cidr=172.17.0.0/16
     - --disable=traefik,servicelb
+    - --disable-kube-proxy
 {% for tls_san in hostvars[host].k3s_controlplane_san %}
     - --tls-san={{ tls_san }}
 {% endfor %}
